kite/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kite
  namespace: kite
spec:
  selector:
    app: kite
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
